<resources>
    <string name="app_name">Lab 2</string>
    <string name="look_at_my_gui">Look at my GUI:</string>
    <string name="click_here">Click here</string>
    <string name="check_this_out">Check this out!</string>
    <string name="switch_on_off">Switch on / off</string>
    <string name="type_here">Type here</string>
    <string name="toast_message">Here is more information</string>
    <string name="switch_is_now">The switch is now</string>
    <string name="switch_on">on</string>
    <string name="switch_off">off</string>
</resources>
