<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Row 1: TextView -->
    <TextView
        android:id="@+id/textView"
        android:text="@string/look_at_my_gui"
        android:textSize="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <!-- Row 2: Button and CheckBox -->
    <Button
        android:id="@+id/button"
        android:text="@string/click_here"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView"
        android:layout_alignParentStart="true" />

    <CheckBox
        android:id="@+id/checkBox"
        android:text="@string/check_this_out"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView"
        android:layout_toEndOf="@id/button" />

    <!-- Row 3: ImageButton and Switch -->
    <ImageButton
        android:id="@+id/imageButton"
        android:src="@drawable/flag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/button"
        android:layout_alignParentStart="true" />

    <Switch
        android:id="@+id/switch1"
        android:text="@string/switch_on_off"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/checkBox"
        android:layout_alignParentEnd="true" />

    <!-- Row 4: EditText -->
    <EditText
        android:id="@+id/editText"
        android:hint="@string/type_here"
        android:inputType="textPersonName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageButton" />
</RelativeLayout>
